# jax_simplex

./: README.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.py
jax_simplex/: pivoting.py  simplex.py
tests/: timing.py
